@@ -6,4 +6,16 @@
 
   <!-- ZPT support -->
   <grok:grok package=".templatereg" />
+
+  <!-- Configure the ignore patterns for template association -->
+  <grok:ignoreTemplates pattern="~$" />
+  <grok:ignoreTemplates pattern="^\." />
+
+  <!-- Ignore chameleon extra files -->
+  <!-- XXX: this should move to megrok.chameleon -->
+  <grok:ignoreTemplates pattern="\.cpt\.py$" />
+  <grok:ignoreTemplates pattern="\.cpt\.pyc$" />
+  <grok:ignoreTemplates pattern="\.cpt\.pyo$" />
+  <grok:ignoreTemplates pattern="\.cpt\.cache$" />
+
 </configure>
