@@ -1,10 +1,20 @@
 <configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:grok="http://namespaces.zope.org/grok">
+   xmlns="http://namespaces.zope.org/zope"
+   xmlns:meta="http://namespaces.zope.org/meta"
+   xmlns:grok="http://namespaces.zope.org/grok">
+
   <include package="grokcore.component" file="meta.zcml" />
   <include package="grokcore.security" file="meta.zcml" />
 
-  <!-- Only load view and template grokkers --> 
+  <meta:directives namespace="http://namespaces.zope.org/grok">
+    <meta:directive
+        name="ignoreTemplates"
+        schema=".zcml.IIgnoreTemplatesDirective"
+        handler=".zcml.ignoreTemplates"
+        />
+  </meta:directives>
+
+  <!-- Only load view and template grokkers -->
   <grok:grok package=".meta.views" />
   <grok:grok package=".meta.templates" />
 
